Bug 74787 - Crash on importing template
Summary: Crash on importing template
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: x86 (IA32) Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords: regression
: 76342 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-10 12:11 UTC by Anton Derbenev
Modified: 2014-03-19 09:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
importing this file to templates in LO 4.2.0.4 causes crash (32.33 KB, application/vnd.oasis.opendocument.text-template)
2014-02-10 12:11 UTC, Anton Derbenev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Derbenev 2014-02-10 12:11:15 UTC
Created attachment 93764 [details]
importing this file to templates in LO 4.2.0.4 causes crash

Problem description: 

Steps to reproduce:
1. Start LO.
2. Click "Templates" in top left corner, click "My Templates"
3. Click "Import" on the toolbar
4. Select file, attached to this bug, click "Open"

Current behavior:
crash

Expected behavior:
no crash
Comment 1 janbart 2014-02-12 13:48:32 UTC
I am not sure this is the same, but a template that works fine in 4.0.5.2 can be imported ok, but when opened to be edited, LO 4.2.0.4 crashes
Comment 2 Karsten Henning 2014-02-12 14:48:23 UTC
I think, I ave the same problem. Old templates can not be load to change them. LO crashes!
New templates, wich I created by "save as ODF-template" are not recognized as templates when I want to open these template. The template are not appear in the template-window!

But a simple double click on the file in last documents opens the file as template for changing, not as a new document!

It seems, that the Version 4.0.5.3 has also a problem with templates. It dosn't work correct but without crash.
Comment 3 Jorendc 2014-02-13 22:44:41 UTC
Can you please retest, with LibreOffice 4.2.1 RC1 (download at http://dev-builds.libreoffice.org/pre-releases/ ).

Direct downloadlink for windows users: http://dev-builds.libreoffice.org/pre-releases/win/x86/LibreOffice_4.2.1.1_Win_x86.msi

Is this bug still reproducible with this version?

Thanks for retesting,
Joren
Comment 4 Anton Derbenev 2014-02-14 12:27:52 UTC
4.2.1.1 RC does not crash, so the problem specified in subject is fixed.

But problem with text corruption [Bug 74780] is much more apparent now.
Comment 5 Bug reporter 07 2014-03-04 03:28:57 UTC
This behavior occurs also with LO 4.2.1.1 release

Steps to reproduce:
1. Start LO.
2. Click "Templates" in top left corner, click "My Templates"
3. Click "Import" on the toolbar
4. Select file, (any files for calc or writer or draw), click "Open"
Libreoffice crahes
error message: Due to an unexpected error libreoffice crashed.
All the files you were working on will be saved now. The next time libreoffice is launched your files will be recovered automaticlly.

Then Libreoffice restart on its own (no user intervention)

Current behavior:
crash

Expected behavior:
no crash

Note If you double click "My Templates" you are not in folder view anymore.
I explain: you see "All templates" My Templates" displayed instead of the square boxes used for each folder ex: my templates, mediawiki, presentation background.

Then import feature work very well and this is the only option presented to you in the top left corner of template manager
Comment 6 Michael Stahl 2014-03-06 22:34:23 UTC
regression from:

commit 0314034d8b23d5b69399cfcdf6b2f2add73f9f47
Author:     Zolnai Tamás <tamas.zolnai@collabora.com>
AuthorDate: Thu Jan 9 14:34:35 2014 +0100

    fdo#71628 Startcenter: remove thumbnail selection when focus is moved away
Comment 7 Commit Notification 2014-03-06 23:31:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b6ec280f3d7f35fb9c8c8ba92a31d51ab4dca16

fdo#74787, rhbz#1072553: fix Template Mananger import crash



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-03-07 09:28:10 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6235a7261b7a763cbce4e3b2ffd93921008acb02

Revert "fdo#74787, rhbz#1072553: fix Template Mananger import crash"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-03-07 10:34:52 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b071644756772d0b6930ac2e6d27237b67e7febc&h=libreoffice-4-2

fdo#74787, rhbz#1072553: Fix deselection problems of template view


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Jorendc 2014-03-19 09:46:13 UTC
*** Bug 76342 has been marked as a duplicate of this bug. ***