fdo#74787, rhbz#1072553: fix Template Mananger import crash

File dialog causes call to ThumbnailView::LoseFocus() and clears
selected folders.

(regression from 0314034d8b23d5b69399cfcdf6b2f2add73f9f47)

Change-Id: Ic5f2602e9dd1d12aad8c68c48f6bbb119ee6492c